# ChatApplication

./: CMakeLists.txt  CMakeLists2.txt
src/client/: client.cpp  clientmain.cpp  clientmain.h
src/connection/: connectiontest.h  netinclude.h  s_connection.h  s_old_packet.h  s_packet.h  s_tsqueue.h
src/glad/: glad.c
src/server/: server.h
